--- a/pagina.html
+++ b/pagina.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-        <title>Mi primera paginita</title>
+        <title>Mi primera programada</title>
   </head>
   <body>
     
