Cambios en body

--- a/pagina.html
+++ b/pagina.html
@@ -3,6 +3,6 @@
         <title>Mi primera programada</title>
   </head>
   <body>
-    
+      <h1>Primer intento de website</h1>
   </body>
 </html>
