Clase 5 - Creo script en HTML en BODY 🚀

--- a/pagina.html
+++ b/pagina.html
@@ -1,6 +1,7 @@
 <html>
   <head> 
         <title>Mi primera programada</title>
+        <script></script>
   </head>
   <body>
       <h1>Primer intento de website</h1>
