--- a/pagina.html
+++ b/pagina.html
@@ -5,6 +5,6 @@
   </head>
   <body>
       <h1>Primer intento de website</h1>
-      <p></p>
+      <p>Este es nuestro primer programa completo  y profesional</p>
   </body>
 </html>
