--- a/pagina.html
+++ b/pagina.html
@@ -1,7 +1,11 @@
 <html>
   <head> 
         <title>Mi primera programada</title>
-        <script></script>
+        <script>
+          a = 1
+          b = 2
+          alert("El valor de a+b es " + (a+b))
+        </script>
   </head>
   <body>
       <h1>Primer intento de website</h1>
