Creo variable perrito

--- a/pagina.html
+++ b/pagina.html
@@ -4,6 +4,7 @@
         <script>
           a = 1
           b = 2
+          perrito 
           alert("El valor de a+b es " + (a+b))
         </script>
   </head>
