--- a/pagina.html
+++ b/pagina.html
@@ -4,7 +4,7 @@
         <script>
           a = 1
           b = 2
-          perrito 
+          perrito = "Ciruelejo"
           alert("El valor de a+b es " + (a+b))
         </script>
   </head>
