--- a/Codigos/pagina.html
+++ b/Codigos/pagina.html
@@ -11,6 +11,6 @@
   <body>
       <h1>Primer intento de website</h1>
       <p>Este es nuestro primer programa completo  y profesional</p>
-      <p></p>
+      <p>Gran programa</p>
   </body>
 </html>
