--- a/Codigos/pagina.html
+++ b/Codigos/pagina.html
@@ -6,6 +6,7 @@
           b = 235
           perrito = "Ciruelejo"
           alert("El valor de a+b es " + (a+b))
+          alert("")
         </script>
   </head>
   <body>
