Creo segundo alert

--- a/Codigos/pagina.html
+++ b/Codigos/pagina.html
@@ -6,7 +6,7 @@
           b = 235
           perrito = "Ciruelejo"
           alert("El valor de a+b es " + (a+b))
-          alert("")
+          alert("Este codigo va a funcionar")
         </script>
   </head>
   <body>
