--- a/Codigos/pagina.html
+++ b/Codigos/pagina.html
@@ -1,6 +1,6 @@
 <html>
   <head> 
-        <meta charset="" />
+        <meta charset="utf-8" />
         <title>Mi primera programada</title>
         <script>
           a = 5
