--- a/Clase7.html
+++ b/Clase7.html
@@ -4,6 +4,7 @@
         <title>Mi primera programada</title>
         <script>
          let nombre = ""
+          prompt("Cual es tu nombre?")
         </script>
   </head>
   <body>
