Guardado de variable en nombre

--- a/Clase7.html
+++ b/Clase7.html
@@ -4,7 +4,7 @@
         <title>Mi primera programada</title>
         <script>
          let nombre = ""
-          prompt("Cual es tu nombre?")
+         nombre = prompt("Cual es tu nombre?")
         </script>
   </head>
   <body>
