Alert Clase7.html

--- a/Clase7.html
+++ b/Clase7.html
@@ -5,6 +5,7 @@
         <script>
          let nombre = ""
          nombre = prompt("Cual es tu nombre?")
+         alert("Bienvenida " + nombre)
         </script>
   </head>
   <body>
